<?xml version="1.0" encoding="utf-8"?>
            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:useDefaultMargins="true">

                <!-- QQ Music tile -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/space_sm">

                    <ImageView
                        android:layout_width="@dimen/tile_icon_size"
                        android:layout_height="@dimen/tile_icon_size"
                        android:src="@drawable/ic_app_qq"
                        android:background="@drawable/bg_app_tile"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/app_qq_music" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_sm"
                        android:text="@string/app_qq_music"
                        style="@style/AppBody" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_xs"
                        android:background="@drawable/bg_badge_supported"
                        android:text="@string/app_supported_badge"
                        style="@style/AppBadge" />

                </LinearLayout>

                <!-- 汽水音乐 tile -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/space_sm">

                    <ImageView
                        android:layout_width="@dimen/tile_icon_size"
                        android:layout_height="@dimen/tile_icon_size"
                        android:src="@drawable/ic_app_qishui"
                        android:background="@drawable/bg_app_tile"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/app_qishui_music" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_sm"
                        android:text="@string/app_qishui_music"
                        style="@style/AppBody" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_xs"
                        android:background="@drawable/bg_badge_supported"
                        android:text="@string/app_supported_badge"
                        style="@style/AppBadge" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/space_sm">

                    <ImageView
                        android:layout_width="@dimen/tile_icon_size"
                        android:layout_height="@dimen/tile_icon_size"
                        android:src="@drawable/ic_app_netease"
                        android:background="@drawable/bg_app_tile"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/app_netease_music" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_sm"
                        android:text="@string/app_netease_music"
                        style="@style/AppBody" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_xs"
                        android:background="@drawable/bg_badge_supported"
                        android:text="@string/app_supported_badge"
                        style="@style/AppBadge" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/space_sm">

                    <ImageView
                        android:layout_width="@dimen/tile_icon_size"
                        android:layout_height="@dimen/tile_icon_size"
                        android:src="@drawable/ic_app_kugou"
                        android:background="@drawable/bg_app_tile"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/app_kugou_music" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_sm"
                        android:text="@string/app_kugou_music"
                        style="@style/AppBody" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_xs"
                        android:background="@drawable/bg_badge_supported"
                        android:text="@string/app_supported_badge"
                        style="@style/AppBadge" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/space_sm">

                    <ImageView
                        android:layout_width="@dimen/tile_icon_size"
                        android:layout_height="@dimen/tile_icon_size"
                        android:src="@drawable/ic_app_kuwo"
                        android:background="@drawable/bg_app_tile"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/app_kuwo_music" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_sm"
                        android:text="@string/app_kuwo_music"
                        style="@style/AppBody" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_xs"
                        android:background="@drawable/bg_badge_supported"
                        android:text="@string/app_supported_badge"
                        style="@style/AppBadge" />

                </LinearLayout>

            </GridLayout>
